2017-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.9

	* src/R_vw.cpp (Rvw): Simplified via Rcpp Attributes
	* R/vw.R (vw): Now calls auto-exported function

	* src/init.c (R_init_RVowpalWabbit): Call R_registerRoutines() and
	R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

2016-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.8

	* tests/test2.r: Write prediction to tempdir() not /tmp
	* tests/test6.r: Ditto
	* tests/test8.r: Ditto

2016-07-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.7

	* src/allreduce.cc (all_reduce_init): Use ::bind()
	* src/parse_regressor.cc (save_predictor): Use delete[] with new[]

2015-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/R_vw.cpp: Comment-out gd.h header which is not needed

2015-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Updated to use sudo, and install Rcpp via apt

2015-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/lda_core.cc: Do not use #warning as it is gcc specific

	* src/parser.cc: Replace rand() with drand48() [properly scaled]
	* src/parse_regressor.cc: Ditto

2015-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updates to DESCRIPTION (per R CMD check)
	* NAMESPACE: Ditto

2014-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.6

	* configure.in: Update autoconf macros ax_boost_base and
	ax_boost_program_options to current versions in order to also find
	Boost libraries in /usr/lib/${ARCH}/ under current Debian / Ubuntu

	* config.guess: Added to keep configure happy
	* config.sub: Idem
	* install-sh: Idem

	* src/bfgs.cc: Switch from isnan() to ISNAN() (defined by R) to
	permit compilation under `-std=c++11` where isnan() is also defined.
	* src/gd.cc: Idem
	* src/parse_example.cc: Idem

2012-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5

	* src/*: Massively invasive changes to get rid of stdout, stderr,