@@ -1,29 +1,30 @@
-# Sample .travis.yml for R projects.
-#
-# See the r-travis repo and its wiki 
-#   https://github.com/craigcitro/r-travis/wiki
-#   https://github.com/eddelbuettel/r-travis/
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
 sudo: required
 
+dist: trusty
+
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  # optionally add our launchpad repo, but not needed here
+  # - sudo add-apt-repository -y ppa:edd/misc
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget libboost-program-options-dev r-cran-rcpp
-
-script: 
-  - ./travis-tool.sh run_tests
+  - ./run.sh install_aptget r-cran-rcpp libboost-program-options-dev
+  
+script:
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
+        
 
+    
