@@ -10,6 +10,8 @@
 
 	* NAMESPACE: Use .registration=TRUE on useDynLib
 
+	* .travis.yml: Switch to using run.sh for Travis CI
+
 2016-10-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.0.8
